--- a/SignalR.WebClient/Views/Home/SignalR.cshtml
+++ b/SignalR.WebClient/Views/Home/SignalR.cshtml
@@ -7,23 +7,21 @@
 
 <h2>SignalR</h2>
 
-<ul id="messagesList">
-
-</ul>
+<ul id="messagesList"></ul>
 
 <script type="text/javascript">
 
     const connection = new signalR.HubConnectionBuilder()
-        .withUrl("https://localhost:44337/stackstormhub")
+        .withUrl("http://localhost:49897/integrationhub")
         .configureLogging(signalR.LogLevel.Information)
         .build();
     connection.start().catch(err => console.error(err.toString()));
 
 
-    connection.on("ReceiveMessage", (user, message) => {
-        const encodedMsg = user + " says " + message;
+    connection.on("ReceiveMessage", (message) => {
+        const encodedMsg = message;
         const li = document.createElement("li");
-        li.textContent = encodedMsg;
+        li.textContent = encodedMsg
         document.getElementById("messagesList").appendChild(li);
     });
 
