--- a/SignalR.WebClient/Views/Home/SignalR.cshtml
+++ b/SignalR.WebClient/Views/Home/SignalR.cshtml
@@ -12,12 +12,16 @@
 <script type="text/javascript">
 
     const connection = new signalR.HubConnectionBuilder()
+        //.withUrl('http://localhost:49897/integrationhub?entity=case&entityId=377', { accessTokenFactory: () => token })
         .withUrl("http://localhost:49897/integrationhub?entity=case&entityId=376")
         //.withUrl("http://localhost:49897/integrationhub")
         .configureLogging(signalR.LogLevel.Information)
         .build();
     connection.start().catch(err => console.error(err.toString()));
 
+    connection.onclose(function (e) {
+        console.log('connection closed' + e);
+    });
 
     connection.on("ReceiveMessage", (message) => {
         const encodedMsg = message;
